@@ -12,6 +12,8 @@ VERSION 2.8-Beta 1
    * Added Ctrl+H shortcut to randomize playlist, patch by Harsh Gupta. (BR 208061)
 
   CHANGES:
+   * Problematic support for treating MusicBrainz ids as track unique ids was dropped;
+     should avoid surprising "Duplicate Tracks Found" errors. (BR 315329)
    * Fancy behavior of some context menus showing different actions when Shift
      key is held has been reverted. All entries are now shown all the time.
    * The dynamic playlist behaviour has changed. It will not longer
